# ML-Library

./: .gitignore  CMakeLists.txt  README.md  new_build.sh  testall.sh
header/: eval_matrics.h  file_handling.h  linear_regression.h  logging.h  logistic_regression.h  main.h  math_funcs.h  matrix.h  progressbar.h  regression.h  vector.h
src/: default_lin_reg.c  default_log_reg.c  default_soft_reg.c  eval_metrics.c  file_handling.c  linear_regression.c  logging.c  logistic_regression.c  main.c  math_funcs.c  matrix.c  progressbar.c  regression.c  vector.c  visualizer.py
tests/: test_activations.c  test_data_manipulation.c  test_dot_product.c  test_identity.c  test_linear_regression.c  test_logging.c  test_mat_vect_mult.c  test_matrix_math.c  test_matrix_operations.c  test_normalization.c  test_random_permutation.c  test_transpose.c  test_vector_math.c  test_vector_operations.c
